commenting doc link

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -397,7 +397,7 @@
                             <descriptors>
                                 <descriptor>src/assembly/bin.xml</descriptor>
                                 <descriptor>src/assembly/src.xml</descriptor>
-                                <descriptor>src/assembly/docs.xml</descriptor>
+                                <!--descriptor>src/assembly/docs.xml</descriptor-->
                             </descriptors>
                         </configuration>
                     </execution>
