--- a/modules/distribution/conf/shindig/web.xml
+++ b/modules/distribution/conf/shindig/web.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements.  See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership.  The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License.  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied.  See the License for the
-  specific language governing permissions and limitations
-  under the License.
+ ~ Copyright (c) 2016, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ ~
+ ~ Licensed under the Apache License, Version 2.0 (the "License");
+ ~ you may not use this file except in compliance with the License.
+ ~ You may obtain a copy of the License at
+ ~
+ ~      http://www.apache.org/licenses/LICENSE-2.0
+ ~
+ ~ Unless required by applicable law or agreed to in writing, software
+ ~ distributed under the License is distributed on an "AS IS" BASIS,
+ ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ ~ See the License for the specific language governing permissions and
+ ~ limitations under the License.
 -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
@@ -43,21 +40,19 @@
             org.apache.shindig.sample.shiro.ShiroGuiceModule:
             org.apache.shindig.sample.container.SampleContainerGuiceModule:
             org.apache.shindig.extras.ShindigExtrasGuiceModule:
-            org.apache.shindig.gadgets.admin.GadgetAdminModule
+            org.apache.shindig.gadgets.admin.GadgetAdminModule:
+            org.wso2.carbon.dashboard.shindig.features.WSO2ShindigFeaturesModule
         </param-value>
     </context-param>
 
     <!--
     Syntax: <key>=<value> separated by a newline
-
     system.properties specifies the environmental variables that will be set to the JVM System Properties at server startup time.
     Alternatively, you may add these values in your app server (ex: Tomcat) as
     VM arguments like this: -Dshindig.host="my.production.shindig.server.com".
-
     Here are a few properties that can be set for Shindig:
     shindig.host: the server name that Shindig is deployed and running on
     shindig.port: the port number of shindig.host server
-
     Make sure you escape all HTML values for the web.xml to be parsed correctly.
     -->
     <context-param>
@@ -70,6 +65,23 @@
      ]]>
         </param-value>
     </context-param>
+
+    <filter>
+        <filter-name>HttpHeaderSecurityFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.HttpHeaderSecurityFilter</filter-class>
+        <init-param>
+            <param-name>hstsEnabled</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <init-param>
+            <param-name>antiClickJackingOption</param-name>
+            <param-value>SAMEORIGIN</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>HttpHeaderSecurityFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>hostFilter</filter-name>
@@ -101,14 +113,12 @@
                 shindigSampleRealm = org.apache.shindig.sample.shiro.SampleShiroRealm
                 securityManager.realm = $shindigSampleRealm
                 authc.loginUrl = /login.jsp
-
                 [urls]
                 # The /login.jsp is not restricted to authenticated users (otherwise no one could log in!), but
                 # the 'authc' filter must still be specified for it so it can process that url's
                 # login submissions. It is 'smart' enough to allow those requests through as specified by the
                 # shiro.loginUrl above.
                 /login.jsp = authc
-
                 /oauth/authorize/** = authc
                 /oauth2/authorize/** = authc
             ]]>
@@ -187,7 +197,7 @@
     <servlet>
         <servlet-name>xml-to-html</servlet-name>
         <servlet-class>
-            org.apache.shindig.gadgets.servlet.GadgetRenderingServlet
+            org.wso2.carbon.dashboard.shindig.extensions.WSO2GadgetRenderingServlet
         </servlet-class>
     </servlet>
 
@@ -372,10 +382,28 @@
         <url-pattern>/xpc*</url-pattern>
     </servlet-mapping>
 
-    <session-config>
-        <cookie-config>
-            <secure>true</secure>
-        </cookie-config>
-    </session-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-pages/error404.html</location>
+    </error-page>
 
+    <error-page>
+        <error-code>401</error-code>
+        <location>/error-pages/error401.html</location>
+    </error-page>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/error-pages/error403.html</location>
+    </error-page>
+
+    <error-page>
+        <error-code>405</error-code>
+        <location>/error-pages/error405.html</location>
+    </error-page>
+
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error-pages/error500.html</location>
+    </error-page>
 </web-app>
