--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>org.wso2.is.portal.user.client.realmservice</artifactId>
             <version>${carbon.is.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.is</groupId>
+            <artifactId>org.wso2.is.portal.user.client.profile</artifactId>
+            <version>${carbon.is.version}</version>
+        </dependency>
     </dependencies>
 
 
@@ -77,11 +82,14 @@
                         <configuration>
                             <instructions>
                                 <Import-Package>org.wso2.is.portal.user.client.realmservice</Import-Package>
+                                <Import-Package>org.wso2.is.portal.user.client.profile</Import-Package>
                             </instructions>
                             <!--All backend dependencies should be specified here-->
                             <bundles>
                                 <bundle>
                                     <symbolicName>org.wso2.is.portal.user.client.realmservice</symbolicName>
+                                    <version>${carbon.is.version}</version>
+                                    <symbolicName>org.wso2.is.portal.user.client.profile</symbolicName>
                                     <version>${carbon.is.version}</version>
                                 </bundle>
                                 <!--<bundle>-->
