--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -36,6 +36,7 @@
 
     <modules>
         <module>osgi-services/org.wso2.is.portal.user.client.realmservice</module>
+        <module>osgi-services/org.wso2.is.portal.user.client.profile</module>
 
         <module>apps/org.wso2.carbon.iam.user-portal.app</module>
         <!--<module>osgi-services/org.wso2.carbon.uuf.sample.pets-store.bundle</module>-->
