--- a/pom.xml
+++ b/pom.xml
@@ -1507,11 +1507,10 @@
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.2.0</identity.carbon.auth.saml2.version>
         <identity.inbound.auth.saml.version>5.3.0</identity.inbound.auth.saml.version>
-        <identity.inbound.auth.oauth.version>5.3.2</identity.inbound.auth.oauth.version>
+        <identity.inbound.auth.oauth.version>5.3.3</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.2.1</identity.inbound.auth.openid.version>
         <identity.agent.sso.version>5.1.3</identity.agent.sso.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.3
-        </identity.outbound.auth.requestpath.basicauth.version>
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.3</identity.outbound.auth.requestpath.basicauth.version>
         <identity.inbound.auth.sts.version>5.2.1</identity.inbound.auth.sts.version>
         <identity.outbound.auth.requestpath.basicauth.version>5.1.3</identity.outbound.auth.requestpath.basicauth.version>
         <identity.carbon.auth.mutual.ssl.version>5.1.2</identity.carbon.auth.mutual.ssl.version>
@@ -1531,8 +1530,8 @@
         <identity.data.publisher.audit.version>1.0.0</identity.data.publisher.audit.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
-        <identity.governance.version>1.0.0</identity.governance.version>
-        <carbon.identity.auth.version>1.1.0</carbon.identity.auth.version>
+        <identity.governance.version>1.0.1</identity.governance.version>
+        <carbon.identity.auth.version>1.1.1</carbon.identity.auth.version>
         <identity.event.handler.account.lock.version>1.1.0</identity.event.handler.account.lock.version>
         <identity.event.handler.notification.version>1.0.0</identity.event.handler.notification.version>
         <identity.app.authz.xacml.version>1.0.0</identity.app.authz.xacml.version>
