--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -54,7 +54,7 @@
         <!--Backend dependencies-->
         <dependency>
             <groupId>org.wso2.is</groupId>
-            <artifactId>org.wso2.is.portal.user.client.realmservice</artifactId>
+            <artifactId>org.wso2.is.portal.user.client.api</artifactId>
             <version>${carbon.is.version}</version>
         </dependency>
     </dependencies>
@@ -76,12 +76,12 @@
                         </goals>
                         <configuration>
                             <instructions>
-                                <Import-Package>org.wso2.is.portal.user.client.realmservice</Import-Package>
+                                <Import-Package>org.wso2.is.portal.user.client.api</Import-Package>
                             </instructions>
                             <!--All backend dependencies should be specified here-->
                             <bundles>
                                 <bundle>
-                                    <symbolicName>org.wso2.is.portal.user.client.realmservice</symbolicName>
+                                    <symbolicName>org.wso2.is.portal.user.client.api</symbolicName>
                                     <version>${carbon.is.version}</version>
                                 </bundle>
                                 <!--<bundle>-->
