--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -35,7 +35,7 @@
     <url>http://wso2.org</url>
 
     <modules>
-        <module>osgi-services/org.wso2.is.portal.user.client.realmservice</module>
+        <module>osgi-services/org.wso2.is.portal.user.client.api</module>
 
         <module>apps/org.wso2.carbon.iam.user-portal.app</module>
         <!--<module>osgi-services/org.wso2.carbon.uuf.sample.pets-store.bundle</module>-->
