Adding test users.

--- a/product/carbon-home/conf/identity/domain-config.yaml
+++ b/product/carbon-home/conf/identity/domain-config.yaml
@@ -61,7 +61,7 @@ domains:
         attribute: "nickName"
         claimUri: "http://wso2.org/claims/nickname"
       -
-        attribute: "email"
+        attribute: "mail"
         claimUri: "http://wso2.org/claims/email"
       -
         attribute: "title"
