--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/config.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/config.yaml
@@ -7,8 +7,8 @@ menu :
       Login : {link: "login", icon: "fw fw-add"}
       Sign up : {link: "user/signup", icon: "fw fw-add"}
       Reset Password : {link: "user/reset-password", icon: "fw fw-add"}
-      User Profile: {link: "profile", icon: "fw fw-user"}
-      Account Settings : {link: "users/account/account-setting", icon: "fw fw-add"}
+      User Profile: {link: "user/profile", icon: "fw fw-user"}
+      Account Settings : {link: "user/account/account-setting", icon: "fw fw-add"}
 errorPages:
   "404": /foundation/error/404
   "401": /login
