Added backend services for user self sign-up

--- a/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -53,6 +53,11 @@
             <version>${org.wso2.carbon.identity.mgt.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.wso2.carbon.identity.mgt</groupId>
+            <artifactId>org.wso2.carbon.identity.meta.claim.mgt</artifactId>
+            <version>${org.wso2.carbon.identity.mgt.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.eclipse.osgi</groupId>
             <artifactId>org.eclipse.osgi.services</artifactId>
         </dependency>
@@ -70,6 +75,7 @@
             javax.security.*,
             org.slf4j.*;version="${slf4j.import.version.range}",
             org.wso2.carbon.identity.mgt.*;version="${org.wso2.carbon.identity.mgt.version.range}",
+            org.wso2.carbon.identity.meta.claim.mgt.*;version="${org.wso2.carbon.identity.mgt.version.range}"
         </import.package>
         <export.package>
             !org.wso2.is.portal.user.client.api.internal.*,
