making user portal compatible with latest uuf changes..

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
@@ -19,3 +19,8 @@ bindings:
       mode: "append"
       fragments:
         - "org.wso2.carbon.uuf.common.foundation.menubar"
+
+config:
+  appName: "Pet Store"
+  pageSize: 10
+  loginRedirectUri: "/pets"
