--- a/pom.xml
+++ b/pom.xml
@@ -573,14 +573,14 @@
         <carbon.security.userstore.jdbc.version>1.0.0-SNAPSHOT</carbon.security.userstore.jdbc.version>
         <org.wso2.carbon.identity.mgt.version>1.0.0-SNAPSHOT</org.wso2.carbon.identity.mgt.version>
         <carbon.is.version>6.0.0-SNAPSHOT</carbon.is.version>
-        <carbon.security.caas.version>1.0.0-SNAPSHOT</carbon.security.caas.version>
+        <carbon.security.caas.version>1.0.0-m2</carbon.security.caas.version>
         <org.wso2.carbon.identity.inbound.provisioning.scim2.version>2.0.0-SNAPSHOT</org.wso2.carbon.identity.inbound.provisioning.scim2.version>
 
-        <carbon.uuf.version>1.0.0-m7</carbon.uuf.version>
+        <carbon.uuf.version>1.0.0-SNAPSHOT</carbon.uuf.version>
         <carbon-uuf-maven-plugin.version>1.0.0-m9</carbon-uuf-maven-plugin.version>
-        <carbon.security.version>1.0.0-SNAPSHOT</carbon.security.version>
+        <carbon.security.version>1.0.0-m2</carbon.security.version>
         <carbon.metrics.version>2.0.0</carbon.metrics.version>
-        <carbon.uuf.common.version>1.0.0-SNAPSHOT</carbon.uuf.common.version>
+        <carbon.uuf.common.version>1.0.0-m1</carbon.uuf.common.version>
 
         <!--3rd party related properties-->
         <commons-beanutils.wso2.version>1.8.0.wso2v1</commons-beanutils.wso2.version>
