--- a/pom.xml
+++ b/pom.xml
@@ -576,7 +576,7 @@
         <carbon.security.caas.version>1.0.0-m2</carbon.security.caas.version>
         <org.wso2.carbon.identity.inbound.provisioning.scim2.version>2.0.0-SNAPSHOT</org.wso2.carbon.identity.inbound.provisioning.scim2.version>
 
-        <carbon.uuf.version>1.0.0-SNAPSHOT</carbon.uuf.version>
+        <carbon.uuf.version>1.0.0-m9</carbon.uuf.version>
         <carbon-uuf-maven-plugin.version>1.0.0-m9</carbon-uuf-maven-plugin.version>
         <carbon.uuf.common.version>1.0.0-m1</carbon.uuf.common.version>
         <carbon.security.version>1.0.0-m2</carbon.security.version>
